force-app/main/default/objects/BasiqEntityBigAccount__b/BasiqEntityBigAccount__b.object-meta.xml
<CustomObject>
    <label>Basiq Entity Big Account</label>
    <pluralLabel>Basiq Entity Big Accounts</pluralLabel>
</CustomObject>