force-app/main/default/objects/BasiqEntityBigAccount__b/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <label>Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>