force-app/main/default/objects/BasiqEntityBigAccount__b/fields/AvailableFunds__c.field-meta.xml
<CustomField>
    <fullName>AvailableFunds__c</fullName>
    <label>Available Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>