force-app/main/default/objects/BasiqEntityBigAccount__b/fields/BasiqConnectionId__c.field-meta.xml
<CustomField>
    <fullName>BasiqConnectionId__c</fullName>
    <label>Basiq Connection Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>